<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/qb_px_0">
    <RelativeLayout
        android:id="@+id/id_pdf_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_56"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/theme_color_cyan">

        <ImageButton
            android:id="@+id/id_pdf_info_back"
            android:layout_width="@dimen/qb_px_50"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_white"
            android:background="@color/theme_color_cyan"/>

        <TextView
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/id_pdf_info_back"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:text="@string/reader_pdf_info"
            android:textColor="@color/theme_color_white"
            android:layout_marginStart="@dimen/qb_px_10"
            android:textSize="@dimen/qb_px_20"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/id_pdf_info_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/reader_info_header"
                android:text="@string/reader_pdf_info_abstract" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_fileName"/>
                <TextView
                    android:id="@+id/id_pdf_info_fileName"
                    style="@style/reader_info_subTitle"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_size"/>
                <TextView
                    android:id="@+id/id_pdf_info_size"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_title"/>
                <TextView
                    android:id="@+id/id_pdf_info_title"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_author"/>
                <TextView
                    android:id="@+id/id_pdf_info_author"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>

            <android.support.v7.widget.AppCompatTextView
                style="@style/reader_info_header"
                android:text="@string/reader_pdf_info_createInfo" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_version"/>
                <TextView
                    android:id="@+id/id_pdf_info_version"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_pages"/>
                <TextView
                    android:id="@+id/id_pdf_info_pages"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_creator"/>
                <TextView
                    android:id="@+id/id_pdf_info_creator"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_producer"/>
                <TextView
                    android:id="@+id/id_pdf_info_producer"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_creationDate"/>
                <TextView
                    android:id="@+id/id_pdf_info_creationDate"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_modification"/>
                <TextView
                    android:id="@+id/id_pdf_info_modification"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>


            <android.support.v7.widget.AppCompatTextView
                style="@style/reader_info_header"
                android:text="@string/reader_pdf_info_accessPer" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_encrypted"/>
                <TextView
                    android:id="@+id/id_pdf_info_encrypted"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_unlocked"/>
                <TextView
                    android:id="@+id/id_pdf_info_unlocked"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_allowCopy"/>
                <TextView
                    android:id="@+id/id_pdf_info_allowCopy"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:background="#1e000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/reader_info_title"
                    android:text="@string/reader_pdf_info_allowPrint"/>
                <TextView
                    android:id="@+id/id_pdf_info_allowPrint"
                    style="@style/reader_info_subTitle"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_1"
                android:background="#1e000000"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>