<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/qb_px_0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/qb_px_0"
        android:orientation="vertical">

        <include
            layout="@layout/layout_toolbar"
            android:minHeight="?attr/actionBarSize" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/more_setting_header"
            android:text="@string/settings_more_head_one" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_share"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/settings_more_share" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_bookmark"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/id_more_setting_bookmark_title"
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_bookmark"
                android:text="@string/settings_more_add_bookmark" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_print"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_print"
                android:text="@string/settings_more_print" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_info"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/ic_info"
                android:text="@string/settings_more_info" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_cleanSign"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_no_sign"
                android:text="@string/clean_image_sign" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_reflow"
            style="@style/more_setting_constraintLayout"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_reflow"
                android:text="@string/settings_more_reflow" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/more_setting_header"
            android:text="@string/settings_more_head_three" />

        <android.support.constraint.ConstraintLayout
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_lock"
                android:text="@string/settings_more_lock" />

            <Switch
                android:id="@+id/id_more_setting_lock_switch"
                android:layout_width="@dimen/qb_px_50"
                android:layout_height="@dimen/qb_px_12"
                android:layout_marginEnd="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_12"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/id_more_setting_turning"
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_fanye"
                android:text="@string/settings_more_turn" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/id_more_setting_turning_sub_title"
                style="@style/more_setting_item_sub_title"/>
        </android.support.constraint.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_1"
            android:background="#1e000000"/>

        <android.support.constraint.ConstraintLayout
            style="@style/more_setting_constraintLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/more_setting_item_title"
                android:drawableStart="@drawable/view_ic_brightness"
                android:text="@string/settings_more_brightness" />

            <SeekBar
                android:id="@+id/id_more_setting_brightness_seekbar"
                android:layout_width="@dimen/qb_px_150"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_18"
                android:progressDrawable="@drawable/seek_progress_one"
                android:thumb="@drawable/seek_thumb_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>